--- a/index.css
+++ b/index.css
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@500;600;700&display=swap');
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Nunito", sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
 
 body {
@@ -73,7 +73,7 @@ body {
 }
 
 .tasks input:checked ~ label:after {
-  content: "✓";
+  content: '✓';
   position: absolute;
   top: 50%;
   left: 50%;
@@ -83,6 +83,15 @@ body {
 
 .task input:checked ~ span {
   text-decoration: line-through;
+}
+
+.delete-button {
+  all: unset;
+  cursor: pointer;
+  background-color: #95ecff;
+  padding: 4px 10px;
+  color: white;
+  font-weight: bold;
 }
 
 label {
